<resources>
    <string name="app_name">MeraBillPractical</string>
    <string name="txt_total_amount">"Total Amount = %1s"</string>
    <string name="txt_payments">Payments</string>
    <string name="txt_add_payment"><u>Add Payment</u></string>
    <string name="txt_add_payment_title">Add Payment</string>
    <string name="txt_save">Save</string>
    <string name="txt_amount">Amount</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_ok">OK</string>
    <string name="txt_payment_type">Payment Type</string>
    <string name="txt_provider_hint">Provider (ICICI, Citibank, ect.)</string>
    <string name="txt_transaction_reference">Transaction Reference</string>
    <string name="txt_saved_successfully">Saved successfully</string>
    <string name="txt_cash">Cash</string>
    <string name="txt_bank_transfer">Bank Transfer</string>
    <string name="txt_credit_card">Credit Card</string>
    <string name="txt_no_payment_yet">You haven’t added any payment methods yet. Tap \'Add Payment\' to proceed.</string>
</resources>