<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:id="@+id/scrollable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_large"
        android:layout_marginVertical="@dimen/space_medium"
        android:paddingTop="50dp"
        android:paddingBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/clActions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvAddPayments"
                style="@style/Theme.TextView.TitleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_add_payment_title"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAmount"
                style="@style/Theme.App.TextField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/space_medium"
                app:errorIconDrawable="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAddPayments">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtAmount"
                    style="@style/Theme.App.TextInputEditText.Normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/indian_rupee_sign_regular"
                    android:drawablePadding="@dimen/space_small"
                    android:hint="@string/txt_amount"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilType"
                style="@style/Theme.App.TextField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/space_medium"
                app:errorIconDrawable="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilAmount">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtType"
                    style="@style/Theme.App.TextInputEditText.Normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:drawableEnd="@drawable/round_keyboard_arrow_down_24"
                    android:drawablePadding="@dimen/space_small"
                    android:focusable="false"
                    android:hint="@string/txt_payment_type"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilProvider"
                style="@style/Theme.App.TextField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/space_medium"
                android:visibility="gone"
                app:errorIconDrawable="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilType">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtProvider"
                    style="@style/Theme.App.TextInputEditText.Normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/space_small"
                    android:hint="@string/txt_provider_hint"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTransactionRef"
                style="@style/Theme.App.TextField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/space_medium"
                android:visibility="gone"
                app:errorIconDrawable="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilProvider">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtTransactionRef"
                    style="@style/Theme.App.TextInputEditText.Normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/space_small"
                    android:hint="@string/txt_transaction_reference"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clActions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_large"
        android:layout_marginBottom="@dimen/space_medium"
        android:elevation="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            style="@style/Theme.App.Button.Primary.Secondary"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_small"
            android:layout_marginEnd="@dimen/space_xlarge"
            android:enabled="true"
            android:paddingStart="@dimen/space_large"
            android:paddingEnd="@dimen/space_large"
            android:text="@string/txt_cancel"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnOk"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOk"
            style="@style/Theme.App.Button.Primary"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_small"
            android:enabled="true"
            android:paddingHorizontal="@dimen/space_large"
            android:paddingStart="@dimen/space_large"
            android:paddingEnd="@dimen/space_large"
            android:text="@string/txt_ok"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:textAllCaps="false" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>