<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/space_medium"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvPrice"
            style="@style/Theme.TextView.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_large"
            android:text="@string/txt_total_amount"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPayments"
            style="@style/Theme.TextView.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_large"
            android:text="@string/txt_payments"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPrice" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/space_large"
            android:orientation="vertical"
            android:visibility="visible"
            app:chipSpacing="@dimen/space_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPayments"
            app:selectionRequired="false"
            app:singleLine="false"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                android:text="Cash = Rs. 450"
                android:textAppearance="@style/Theme.TextView.TitleMedium"
                app:chipBackgroundColor="@color/color_chip"
                app:chipCornerRadius="@dimen/chip_radius"
                app:chipMinHeight="@dimen/chip_height"
                app:closeIconVisible="true"
                tools:ignore="HardcodedText" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                android:text="Cash = Rs. 450"
                android:textAppearance="@style/Theme.TextView.TitleMedium"
                app:chipBackgroundColor="@color/color_chip"
                app:chipCornerRadius="@dimen/chip_radius"
                app:chipMinHeight="@dimen/chip_height"
                app:closeIconVisible="true"
                tools:ignore="HardcodedText" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                android:text="Bank Transfer = Rs. 600"
                android:textAppearance="@style/Theme.TextView.TitleMedium"
                app:chipBackgroundColor="@color/color_chip"
                app:chipCornerRadius="@dimen/chip_radius"
                app:chipMinHeight="@dimen/chip_height"
                app:closeIconVisible="true"
                tools:ignore="HardcodedText" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/tvPaymentLink"
            style="@style/Theme.TextView.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_medium"
            android:paddingVertical="@dimen/space_small"
            android:text="@string/txt_add_payment"
            android:textColor="@color/blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            style="@style/Theme.App.Button.Primary"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/space_xlarge"
            android:enabled="false"
            android:text="@string/txt_save"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPaymentLink"
            app:textAllCaps="false" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvNoPaymentAddedYet"
        style="@style/Theme.TextView.TitleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_large"
        android:layout_marginBottom="200dp"
        android:text="@string/txt_no_payment_yet"
        android:textColor="@color/gray"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>